# RMA-grupo-4

./: README.md  package-lock.json
Backend/: .env.template  pyproject.toml
Backend/src/: bot.py  database.py  exceptions.py  main.py  models.py
Backend/src/example/: constants.py  exceptions.py  models.py  router.py  schemas.py  services.py
Backend/src/mensajes/: router.py  schemas.py
Backend/src/nodos/: constants.py  exceptions.py  models.py  router.py  schemas.py  services.py
Backend/src/notificaciones/: models.py  router.py  schemas.py  services.py
Backend/src/rma-generador/: main.py
Backend/src/rma-generador/mqtt/: __init__.py  pub.py  sub.py
Backend/src/rma_receptor/: mqtt_client.py  mqtt_config.py  mqtt_handler.py  telegram_bot.py  validaciones.py
Backend/src/utils/: qr_utils.py  router.py  schemas.py  services.py
Backend/src/variables/: constants.py  exceptions.py  router.py  schemas.py  services.py
Frontend/rma-grupo4/: index.html  package-lock.json  package.json
Frontend/rma-grupo4/src/: App.jsx  Layout.jsx  main.jsx  routes.jsx
Frontend/rma-grupo4/src/analisis/: HumedadPrecipitacionArea.jsx  Mapa.jsx  MapaNodo.jsx  NivelesDeAgua.jsx  PantallaComparativa.jsx  PresionLineas.jsx  TablaSummary.jsx  TemperaturaHumedadLineas.jsx  TemperaturaPrecipitacionBarra.jsx  VientoRosa.jsx
Frontend/rma-grupo4/src/components/: Admin.jsx  AlertasAdmin.jsx  AsignarRol.jsx  AuthContext.jsx  Breadcrumbs.jsx  ButtonTheme.jsx  DatosNodo.jsx  EliminarUsuario.jsx  Error403.jsx  EstadosNodo.jsx  Footer.jsx  FormNodo.jsx  HelpModal.jsx  Home.jsx  Inicio.jsx  (+21 more)
(+21 files in other folders)
